# visvis

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .travis.yml  Anisotropy.md  Backends.md  Colormaps.md  Creating_a_backend.md  Documentation.md  Events.md  Examples.md  FAQ.md  Features.md  Freezing.md  Installation.md  LICENSE  MANIFEST.in  Mission.md  ProjectHome.md  Publishing.md  README.md  Screenshots.md  Settings.md  Text.md  Visvis_basics.md  __init__.py  axis.py  axises.py  base.py  cameras.py  classes.md  cls_Aarray.md  cls_Axes.md  cls_AxesContainer.md  cls_Axis.md  cls_BaseAxis.md  cls_BaseCamera.md  cls_BaseEvent.md  cls_BaseFigure.md  (+136 more)
backends/: __init__.py  backend_fltk.py  backend_glfw.py  backend_gtk.py  backend_pyqt4.py  backend_pyqt5.py  backend_pyside.py  backend_pyside6.py  backend_qt4.py  backend_wx.py  creatingABackend.txt  qtcommon.py
core/: __init__.py  axes.py  axises.py  base.py  baseFigure.py  baseTexture.py  baseWibjects.py  cameras.py  constants.py  events.py  light.py  line.py  misc.py  orientation.py  shaders.py  shaders_2.py  shaders_3.py  shaders_m.py  shaders_src.py  textRender.py
docs/: functionDocMaker.py  wikClasses.py
examples/: anisotropicData.py  anisotropicData2.py  bouncingBall.py  colorVolume.py  colormaps.py  customWobject.py  drawing.py  embedding.py  embeddingInFLTK.py  embeddingInGTK.py  embeddingInQt4.py  embeddingInWx.py  fourDimensions.py  freeze_photoshow.py  imageEdges.py  images.py  isocontour.py  isosurface.py  lightsAndShading.py  meshes.py  openGlVersion.py  overview.py  photoshow.bat  photoshow.py  picking.py  plotting.py  pointCloud.py  polarplots.py  recordingMovies.py  slicesInVolume.py  statistics.py  surfaceFromRandomPoints.py  surfaceRender.py  text.py  transparantTextures.py  transparentTextures.py  twoAxesOneCamera.py  twoCamerasOneAxes.py  unsharpMasking.py  volumeRenderStyles.py  (+1 more)
fonts/: build.py  pack.py
functions/: __init__.py  aVolume.py  axis.py  bar.py  bar3.py  boxplot.py  callLater.py  cla.py  clf.py  close.py  closeAll.py  colorbar.py  draw.py  figure.py  gca.py  gcf.py  getOpenGlInfo.py  getframe.py  ginput.py  grid.py  help.py  hist.py  imread.py  imshow.py  imwrite.py  isocontour.py  isosurface.py  kde.py  legend.py  mesh.py  meshRead.py  meshWrite.py  movieRead.py  movieShow.py  movieWrite.py  peaks.py  plot.py  polarplot.py  processEvents.py  record.py  (+22 more)
io/: __init__.py  stl.py  wavefront.py
points/: __init__.py  points.py
processing/: __init__.py  _compile.py  calculateFlatNormals.py  calculateNormals.py  combineMeshes.py  lineToMesh.py  statistics.py  unwindFaces.py
testcode/: polarTest.py
tests/: conftest.py  test_functions.py  test_import.py  test_processing.py
text/: __init__.py  text_base.py  text_freetype.py  text_prerendered.py
utils/: __init__.py  cropper.py  graph.py  guisupport.py  pypoints.py
visvis/: __init__.py  freezeHelp.py  pypoints.py
visvisResources/: aa0.fragment.glsl  aa0.glsl  aa1.fragment.glsl  aa1.glsl  aa2.fragment.glsl  aa2.glsl  aa3.fragment.glsl  aa3.glsl  bunny.ssdf  calculateRay.vertex.glsl  colorisosurface.fragment.glsl  colormip.fragment.glsl  coord3d.fragment.glsl  fonts.ssdf  isosurface.fragment.glsl  isosurface.glsl  mip.fragment.glsl  mip.glsl  mip_requiring_backcoords.fragment.glsl  oldmip.glsl  stent_vol.ssdf  (+9 more)
(+183 files in other folders)
